# python-project-52

./: .env  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: task_manager_check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: admin.py  mixins.py  settings.py  urls.py  views.py
task_manager/authorization/: apps.py  forms.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  user.json  user_invalid.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/registration/: apps.py  forms.py  urls.py  views.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statusesmodel_options_alter_statusesmodel_name.py  0003_rename_name_statusesmodel_status.py  0004_rename_status_statusesmodel_name.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasksmodel_status.py  0002_rename_labels_tasksmodel_label.py  0003_alter_tasksmodel_label_alter_tasksmodel_status.py  0004_alter_tasksmodel_label_alter_tasksmodel_status.py  0005_rename_label_tasksmodel_labels_and_more.py
task_manager/templates/: 404.html  form.html  index.html  layout.html  navigation.html
task_manager/templates/authorization/: authorization_form.html
task_manager/templates/labels/: delete.html  index.html
task_manager/templates/statuses/: delete.html  index.html
task_manager/templates/tasks/: delete.html  index.html  task.html
task_manager/templates/user/: index.html  logout_form.html  navigation.html
task_manager/templates/users/: authorization_form.html  delete_user.html  index.html  registration_form.html  update_user_form.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_user_user_name.py  (+6 more)
