[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Treskun4eg <wagamamanowelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.20.0"
django = "^4.2.4"
python-dotenv = "^1.0.0"
django-extensions = "^3.2.3"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
django-bootstrap-v5 = "^1.0.11"
django-filter = "^23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
