[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A project management program that allows you to centrally manage tasks and their timely completion."
authors = ["Treskun4eg <wagamamanowelli@gmail.com>"]
readme = "README.md"
packages = [
    {include = "task_manager"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Django"
]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.20.0"
django = "^4.2.4"
python-dotenv = "^1.0.0"
django-extensions = "^3.2.3"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
django-bootstrap-v5 = "^1.0.11"
django-filter = "^23.5"
rollbar = "^0.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
